[package]
name = "pulldown-cmark"
version = "0.1.0"
edition = "2021"
description = "pulldown_cmark for wasm, published on WAPM"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wapm-packages/pulldown-cmark"
homepage = "https://wasmer.io/"
license = "MIT OR Apache-2.0"
rust-version = "1.62.1"

[package.metadata.wapm]
namespace = "wasmer"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "pulldown.wai" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wai-bindgen-rust = "0.2.1"
original = { version = "0.9.2", package = "pulldown-cmark" }


[dev-dependencies]
anyhow = "1.0.68"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = "0.6.0"

[[test]]
name = "pulldown-integration-tests"
harness = false
